--- a/tasks/templates/tasks/add.html
+++ b/tasks/templates/tasks/add.html
@@ -3,8 +3,10 @@
 {% block body %}
 
 <h1>Add Task</h1>
-<form>
-    <input type="text" name="task" />
+<form action="{% url 'tasks:add' %}" method="POST">
+    {% csrf_token %}
+    <!-- <input type="text" name="task" /> -->
+    {{form}}
     <input type="submit">
 </form>
 <a href="{% url 'tasks:index' %}">View Tasks</a>
